# job-helper

./: .gitignore  README.md  pyproject.toml
src/job_helper/: __init__.py  cli.py  config.py  slurm.py  tables.py  wait_dashboard.py
